[package]
name = "java-locator"
version = "0.1.8"
authors = ["aston <astonbitecode@gmail.com>"]
description = "Locates a Java installation in the host."
keywords = ["java", "jni"]
license = "MIT/Apache-2.0"
repository = "https://github.com/astonbitecode/java-locator"
readme = "README.md"
edition = "2021"

[lib]
name = "java_locator"
path = "src/lib.rs"
crate-type = ["rlib"]
doctest = false

[[bin]]
name = "java-locator"
path = "src/main.rs"
doc = false
required-features = ["build-binary"]

[dependencies]
glob = "0.3"
docopt = { version = "1.1", optional = true }

[features]
build-binary = ["docopt"]
locate-jdk-only = []
